fix: открытие dropdown + backdrop z-index

--- a/app/src/scss/style.scss
+++ b/app/src/scss/style.scss
@@ -277,6 +277,11 @@ img {
     z-index: 100;
     background-color: rgba(242, 242, 242, 0.75);
   }
+
+  &--open-dropdown {
+    z-index: 50;
+    background-color: rgba(242, 242, 242, 0.75);
+  }
 }
 
 .radio-group {
